--- a/Tepeyac.UI.Cocoa/Tepeyac.UI.Cocoa.csproj
+++ b/Tepeyac.UI.Cocoa/Tepeyac.UI.Cocoa.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{613A4431-CB80-47BE-BDD8-5359F7CC42FB}</ProjectGuid>
+    <ProjectGuid>{557B5A48-0302-4EE1-908A-2674384E62F8}</ProjectGuid>
     <ProjectTypeGuids>{1C533B1C-72DD-4CB1-9F6B-BF11D93BCFBE};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Tepeyac.Mac</RootNamespace>
-    <AssemblyName>Tepeyac.Mac</AssemblyName>
+    <OutputType>Library</OutputType>
+    <RootNamespace>Tepeyac.UI.Cocoa</RootNamespace>
+    <AssemblyName>Tepeyac.UI.Cocoa</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -41,45 +41,31 @@
       <HintPath>..\..\tepeyac\ext\Ninject.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="MainWindow.cs">
-      <DependentUpon>MainWindow.xib</DependentUpon>
-    </Compile>
-    <Compile Include="MainWindowController.cs">
-      <DependentUpon>MainWindow.xib</DependentUpon>
-    </Compile>
-    <Compile Include="MainWindow.xib.designer.cs">
-      <DependentUpon>MainWindow.xib</DependentUpon>
-    </Compile>
-    <Compile Include="Main.cs" />
-    <Compile Include="AppDelegate.cs">
-      <DependentUpon>MainMenu.xib</DependentUpon>
-    </Compile>
-    <Compile Include="MainMenu.xib.designer.cs">
-      <DependentUpon>MainMenu.xib</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="MainWindow.xib" />
-    <Page Include="MainMenu.xib" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Info.plist" />
-  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Mono\MonoMac\v0.0\Mono.MonoMac.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\Tepeyac.Core\Tepeyac.Core.csproj">
-      <Project>{B9BD80F1-3987-408F-894A-17E3A6471793}</Project>
-      <Name>Tepeyac.Core</Name>
-    </ProjectReference>
+    <Compile Include="Module.cs" />
+    <Compile Include="StatusItemBurritoDayView.cs">
+      <DependentUpon>StatusItemBurritoDayView.xib</DependentUpon>
+    </Compile>
+    <Compile Include="StatusItemBurritoDayViewController.cs">
+      <DependentUpon>StatusItemBurritoDayView.xib</DependentUpon>
+    </Compile>
+    <Compile Include="StatusItemBurritoDayView.xib.designer.cs">
+      <DependentUpon>StatusItemBurritoDayView.xib</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Tepeyac.UI\Tepeyac.UI.csproj">
       <Project>{B624A415-19F3-42CE-8D77-8C5DEA4489C9}</Project>
       <Name>Tepeyac.UI</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Tepeyac.UI.Cocoa\Tepeyac.UI.Cocoa.csproj">
-      <Project>{557B5A48-0302-4EE1-908A-2674384E62F8}</Project>
-      <Name>Tepeyac.UI.Cocoa</Name>
+    <ProjectReference Include="..\Tepeyac.Core\Tepeyac.Core.csproj">
+      <Project>{B9BD80F1-3987-408F-894A-17E3A6471793}</Project>
+      <Name>Tepeyac.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="StatusItemBurritoDayView.xib" />
   </ItemGroup>
 </Project>
