--- a/Tepeyac.Mac/Info.plist
+++ b/Tepeyac.Mac/Info.plist
@@ -3,13 +3,13 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.Tepeyac.Mac</string>
+	<string>Tepeyac.Mac</string>
 	<key>CFBundleName</key>
 	<string>Tepeyac.Mac</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.6</string>
+	<string>10.5</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
