--- a/Tepeyac.Core/Tepeyac.Core.csproj
+++ b/Tepeyac.Core/Tepeyac.Core.csproj
@@ -37,11 +37,21 @@
     <Compile Include="Platform.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="BurritoDayModel.cs" />
+    <Compile Include="IWebClient.cs" />
+    <Compile Include="WebClient.cs" />
+    <Compile Include="Executor.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Ninject, Version=2.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\tepeyac\ext\Ninject.dll</HintPath>
+      <HintPath>..\ext\Ninject.dll</HintPath>
     </Reference>
+    <Reference Include="Retlang, Version=1.0.6.0, Culture=neutral, PublicKeyToken=a99b3bce1dc72e93">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\ext\Retlang.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net" />
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
   </ItemGroup>
 </Project>
