--- a/Tepeyac.Core.Test/Tepeyac.Core.Test.csproj
+++ b/Tepeyac.Core.Test/Tepeyac.Core.Test.csproj
@@ -5,10 +5,10 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{B624A415-19F3-42CE-8D77-8C5DEA4489C9}</ProjectGuid>
+    <ProjectGuid>{663E268A-E212-40D6-A941-D19EDA58AC50}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Tepeyac.UI</RootNamespace>
-    <AssemblyName>Tepeyac.UI</AssemblyName>
+    <RootNamespace>Tepeyac.Core.Test</RootNamespace>
+    <AssemblyName>Tepeyac.Core.Test</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -31,24 +31,34 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Compile Include="IBurritoDayView.cs" />
-    <Compile Include="BurritoDayPresenter.cs" />
-    <Compile Include="Presenter.cs" />
-    <Compile Include="IToolKit.cs" />
-    <Compile Include="MainPresenter.cs" />
-    <Compile Include="Module.cs" />
-    <Compile Include="IView.cs" />
+    <Compile Include="BurritoDayModelTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\ext\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="Moq, Version=4.0.10827.0, Culture=neutral, PublicKeyToken=69f491c39445e920">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\ext\Moq.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Tepeyac.Core\Tepeyac.Core.csproj">
       <Project>{B9BD80F1-3987-408F-894A-17E3A6471793}</Project>
       <Name>Tepeyac.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Tepeyac.Test\Tepeyac.Test.csproj">
+      <Project>{7027396D-756C-4C94-A747-448CF4B35A82}</Project>
+      <Name>Tepeyac.Test</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Ninject, Version=2.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\ext\Ninject.dll</HintPath>
-    </Reference>
+    <EmbeddedResource Include="..\data\no.html">
+      <Link>no.html</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\data\yes.html">
+      <Link>yes.html</Link>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
