--- a/Tepeyac.Core/Tepeyac.Core.csproj
+++ b/Tepeyac.Core/Tepeyac.Core.csproj
@@ -53,5 +53,6 @@
     <Reference Include="System.Net" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
 </Project>
