--- a/Tepeyac.Core/Tepeyac.Core.csproj
+++ b/Tepeyac.Core/Tepeyac.Core.csproj
@@ -53,6 +53,9 @@
     <Reference Include="System.Net" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml" />
+    <Reference Include="HtmlAgilityPack, Version=1.4.0.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\ext\HtmlAgilityPack.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
