parse tomorrow state

--- a/Tepeyac.Core.Test/Tepeyac.Core.Test.csproj
+++ b/Tepeyac.Core.Test/Tepeyac.Core.Test.csproj
@@ -60,5 +60,8 @@
     <EmbeddedResource Include="..\data\yes.html">
       <Link>yes.html</Link>
     </EmbeddedResource>
+    <EmbeddedResource Include="..\data\tomorrow.html">
+      <Link>tomorrow.html</Link>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
