--- a/Tepeyac.Core/Tepeyac.Core.csproj
+++ b/Tepeyac.Core/Tepeyac.Core.csproj
@@ -40,6 +40,7 @@
     <Compile Include="IWebClient.cs" />
     <Compile Include="WebClient.cs" />
     <Compile Include="Executor.cs" />
+    <Compile Include="Location.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Ninject, Version=2.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7">
@@ -57,5 +58,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\ext\HtmlAgilityPack.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web" />
   </ItemGroup>
 </Project>
