--- a/Tepeyac.Core/Tepeyac.Core.csproj
+++ b/Tepeyac.Core/Tepeyac.Core.csproj
@@ -40,7 +40,7 @@
     <Compile Include="IWebClient.cs" />
     <Compile Include="WebClient.cs" />
     <Compile Include="Executor.cs" />
-    <Compile Include="Location.cs" />
+    <Compile Include="Distance.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Ninject, Version=2.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7">
@@ -59,5 +59,6 @@
       <HintPath>..\ext\HtmlAgilityPack.dll</HintPath>
     </Reference>
     <Reference Include="System.Web" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
 </Project>
