--- a/src/Funq.MonoTouch/Funq.MonoTouch.csproj
+++ b/src/Funq.MonoTouch/Funq.MonoTouch.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{BFE9A50D-DC86-4CC9-8A7D-93985B4B11D1}</ProjectGuid>
+    <ProjectGuid>{1FC14FA0-97E1-4260-B415-D909A4A37075}</ProjectGuid>
     <ProjectTypeGuids>{E613F3A2-FE9C-494F-B74E-F63BCB86FEA6};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
-    <RootNamespace>Tepeyac.iOS</RootNamespace>
-    <AssemblyName>Tepeyac.iOS</AssemblyName>
+    <RootNamespace>Funq.MonoTouch</RootNamespace>
+    <AssemblyName>Funq.MonoTouch</AssemblyName>
     <MtouchMinimumOS>3.0</MtouchMinimumOS>
     <TargetFrameworkVersion>v1.0</TargetFrameworkVersion>
   </PropertyGroup>
@@ -45,70 +45,67 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="monotouch" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Folder Include="Core\" />
-    <Folder Include="UI\" />
+    <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\Tepeyac\Core\BurritoDayModel.cs">
-      <Link>Core\BurritoDayModel.cs</Link>
+    <Compile Include="..\..\ext\funq\src\Core\Funq\Container.cs">
+      <Link>Container.cs</Link>
     </Compile>
-    <Compile Include="..\Tepeyac\Core\BurritoDayState.cs">
-      <Link>Core\BurritoDayState.cs</Link>
+    <Compile Include="..\..\ext\funq\src\Core\Funq\Container.LazyResolve.cs">
+      <Link>Container.LazyResolve.cs</Link>
     </Compile>
-    <Compile Include="..\Tepeyac\Core\Executor.cs">
-      <Link>Core\Executor.cs</Link>
+    <Compile Include="..\..\ext\funq\src\Core\Funq\Container.Register.cs">
+      <Link>Container.Register.cs</Link>
     </Compile>
-    <Compile Include="..\Tepeyac\Core\IBurritoDayModel.cs">
-      <Link>Core\IBurritoDayModel.cs</Link>
+    <Compile Include="..\..\ext\funq\src\Core\Funq\Container.Resolve.cs">
+      <Link>Container.Resolve.cs</Link>
     </Compile>
-    <Compile Include="..\Tepeyac\Core\IWebClient.cs">
-      <Link>Core\IWebClient.cs</Link>
+    <Compile Include="..\..\ext\funq\src\Core\Funq\Container.ResolveImpl.cs">
+      <Link>Container.ResolveImpl.cs</Link>
     </Compile>
-    <Compile Include="..\Tepeyac\Core\WebClient.cs">
-      <Link>Core\WebClient.cs</Link>
+    <Compile Include="..\..\ext\funq\src\Core\Funq\Container.TryResolve.cs">
+      <Link>Container.TryResolve.cs</Link>
     </Compile>
-    <Compile Include="..\Tepeyac\UI\BurritoDayPresenter.cs">
-      <Link>UI\BurritoDayPresenter.cs</Link>
+    <Compile Include="..\..\ext\funq\src\Core\Funq\IFluentInterface.cs">
+      <Link>IFluentInterface.cs</Link>
     </Compile>
-    <Compile Include="..\Tepeyac\UI\GuiPresenter.cs">
-      <Link>UI\GuiPresenter.cs</Link>
+    <Compile Include="..\..\ext\funq\src\Core\Funq\IFunqlet.cs">
+      <Link>IFunqlet.cs</Link>
     </Compile>
-    <Compile Include="..\Tepeyac\UI\IBurritoDayView.cs">
-      <Link>UI\IBurritoDayView.cs</Link>
+    <Compile Include="..\..\ext\funq\src\Core\Funq\Owner.cs">
+      <Link>Owner.cs</Link>
     </Compile>
-    <Compile Include="..\Tepeyac\UI\ILauncher.cs">
-      <Link>UI\ILauncher.cs</Link>
+    <Compile Include="..\..\ext\funq\src\Core\Funq\ResolutionException.cs">
+      <Link>ResolutionException.cs</Link>
     </Compile>
-    <Compile Include="..\Tepeyac\UI\IUrlActivationView.cs">
-      <Link>UI\IUrlActivationView.cs</Link>
+    <Compile Include="..\..\ext\funq\src\Core\Funq\ReuseScope.cs">
+      <Link>ReuseScope.cs</Link>
     </Compile>
-    <Compile Include="..\Tepeyac\UI\IView.cs">
-      <Link>UI\IView.cs</Link>
+    <Compile Include="..\..\ext\funq\src\Core\Funq\ServiceEntry.cs">
+      <Link>ServiceEntry.cs</Link>
     </Compile>
-    <Compile Include="..\Tepeyac\UI\Launcher.cs">
-      <Link>UI\Launcher.cs</Link>
+    <Compile Include="..\..\ext\funq\src\Core\Funq\ServiceEntry.Generic.cs">
+      <Link>ServiceEntry.Generic.cs</Link>
     </Compile>
-    <Compile Include="..\Tepeyac\UI\Presenter.cs">
-      <Link>UI\Presenter.cs</Link>
+    <Compile Include="..\..\ext\funq\src\Core\Funq\ServiceKey.cs">
+      <Link>ServiceKey.cs</Link>
     </Compile>
-    <Compile Include="..\Tepeyac\UI\UrlActivationPresenter.cs">
-      <Link>UI\UrlActivationPresenter.cs</Link>
+    <Compile Include="..\..\ext\funq\src\Core\Funq\Syntax.cs">
+      <Link>Syntax.cs</Link>
     </Compile>
-    <Compile Include="UI.MonoTouch\MonoTouchAdapter.cs" />
-    <Compile Include="UI.MonoTouch\MonoTouchFiber.cs" />
+    <Compile Include="..\..\ext\funq\src\Core\Funq\Properties\AssemblyInfo.cs">
+      <Link>Properties\AssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ext\funq\src\Core\Funq\Properties\Resources.Designer.cs">
+      <Link>Properties\Resources.Designer.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\HtmlAgilityPack.MonoTouch\HtmlAgilityPack.MonoTouch.csproj">
-      <Project>{ABEF8728-33AB-47FA-BAFC-24410B496D7D}</Project>
-      <Name>HtmlAgilityPack.MonoTouch</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Retlang.MonoTouch\Retlang.MonoTouch.csproj">
-      <Project>{613B5F36-6EEF-48F1-AC75-5608038EA3F2}</Project>
-      <Name>Retlang.MonoTouch</Name>
-    </ProjectReference>
+    <None Include="..\..\ext\funq\src\Core\Funq\Properties\Resources.resx">
+      <Link>Properties\Resources.resx</Link>
+    </None>
   </ItemGroup>
 </Project>
