add HtmlAgilityPack ref to Tepeyac.Mac proj

--- a/src/Tepeyac.Mac/Tepeyac.Mac.csproj
+++ b/src/Tepeyac.Mac/Tepeyac.Mac.csproj
@@ -46,6 +46,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\ext\Funq.dll</HintPath>
     </Reference>
+    <Reference Include="HtmlAgilityPack, Version=1.4.0.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\ext\HtmlAgilityPack.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
